# osrm-model-extensions-rs

./: Cargo.toml  LICENSE.txt  README.md  build.rs
instructions/: Cargo.toml  build.rs
instructions/src/: lib.rs
instructions/src/distance/: mod.rs  spoken_numbers.rs  spoken_unit.rs
instructions/src/distance/snapshots/: instructions__distance__spoken_distance__tests__fixed_distances.snap  osrm_extensions_instructions__distance__spoken_numbers__tests__edge_cases.snap  osrm_extensions_instructions__distance__spoken_numbers__tests__number_conversions.snap
instructions/src/geo/snapshots/: instructions__geo__utilities__tests__coordinates_from_geometry.snap  osrm_extensions_instructions__geo__utilities__tests__coordinates_from_geometry.snap
instructions/src/instructions/: banner_instruction.rs  mod.rs  speed_class.rs  utilities.rs  voice_announcements.rs  voice_instructions.rs
instructions/src/instructions/snapshots/: instructions__instructions__banner_instruction__tests__banner_arrival.snap  instructions__instructions__banner_instruction__tests__banner_no_current_step_distance.snap  instructions__instructions__banner_instruction__tests__banner_with_next_step.snap  instructions__instructions__tests__instructions_factory.snap  instructions__instructions__tests__instructions_factory_imperial.snap  instructions__instructions__voice_announcements__tests__depart_announcement.snap  instructions__instructions__voice_announcements__tests__long_step.snap  instructions__instructions__voice_instructions__tests__and_then_step_imperial.snap  instructions__instructions__voice_instructions__tests__depart.snap  (+11 more)
instructions/src/osrm/: extensions.rs  mod.rs  utilities.rs
instructions/src/testing/: fixtures.rs
src/: lib.rs
(+52 files in other folders)
