[workspace]
members = ["i18n", "instructions"]
resolver = "2"

[workspace.package]
version = "0.0.1"
authors = [
    "Jacob Fielding <jacob@rallista.app>",
]
license = "BSD-3-Clause"
edition = "2024"
repository = "https://github.com/Rallista/osrm-extensions-rs"

[workspace.dependencies]
osrm-extensions-i18n = { path = "i18n" }
osrm-extensions-instructions = { path = "instructions" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
