[package]
name = "osrm-model-extensions"
version = "0.0.2"
authors = [
    "Jacob Fielding <jacob@rallista.app>"
]
description = "Extensions for the OSRM routing model"
license = "BSD-3-Clause"
edition = "2024"
repository = "https://github.com/Rallista/osrm-extensions-rs"
build = "build.rs"

[dependencies]
geo = "0.29.3"
rust-i18n = "3.1.2"
polyline = "0.11.0"
round = "0.1.2"
osrm-openapi-models = "0.0.5"
serde = "1.0.228"
serde_json = "1.0.145"

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml", "json"] }
proptest = "1.3"
