[package]
name = "osrm-extensions-instructions"
version.workspace = true
authors.workspace = true
license.workspace = true
edition.workspace = true
repository.workspace = true
build = "build.rs"

[dependencies]
geo = "0.29.3"
rust-i18n = "3.1.2"
osrm-extensions-i18n.workspace = true
# testing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
polyline = "0.11.0"
round = "0.1.2"
osrm-openapi-models = "0.0.5"

[dev-dependencies]
insta = { version = "1.42.1", features = ["yaml", "json"] }
proptest = "1.3"
